--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "dotenv": "^16.4.5",
     "koa": "^2.15.3",
     "koa-bodyparser": "^4.4.1",
+    "koa-passport": "^6.0.0",
     "koa-router": "^12.0.1",
     "mongoose": "^8.5.1",
     "mongoose-beautiful-unique-validation": "^7.1.1",
     "nanoid": "^3.3.7",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "passport-local": "^1.0.0",
+    "uuid": "^10.0.0"
   }
 }
