--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose-beautiful-unique-validation": "^7.1.1",
     "nanoid": "^3.3.7",
     "nodemon": "^3.1.4",
+    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "uuid": "^10.0.0"
   }
