--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@koa/cors": "^5.0.0",
     "dotenv": "^16.4.5",
+    "juice": "^10.0.0",
     "koa": "^2.15.3",
     "koa-bodyparser": "^4.4.1",
     "koa-passport": "^6.0.0",
@@ -21,9 +22,13 @@
     "mongoose": "^8.5.1",
     "mongoose-beautiful-unique-validation": "^7.1.1",
     "nanoid": "^3.3.7",
+    "nodemailer": "^6.9.14",
+    "nodemailer-html-to-text": "^3.2.0",
+    "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^3.1.4",
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
+    "pug": "^3.0.3",
     "uuid": "^10.0.0"
   }
 }
